using WarpTalk.AssistantService.Domain.Entities;
using WarpTalk.AssistantService.Domain.Interfaces;
using WarpTalk.AssistantService.Infrastructure.Persistence;

namespace WarpTalk.AssistantService.Infrastructure.Repositories;

public class AssistantConversationRepository : GenericRepository<AssistantConversation>, IAssistantConversationRepository
{
    public AssistantConversationRepository(AssistantDbContext context) : base(context)
    {
    }
}
