using WarpTalk.AssistantService.Domain.Entities;
using WarpTalk.AssistantService.Domain.Interfaces;
using WarpTalk.AssistantService.Infrastructure.Persistence;

namespace WarpTalk.AssistantService.Infrastructure.Repositories;

public class AssistantMessageRepository : GenericRepository<AssistantMessage>, IAssistantMessageRepository
{
    public AssistantMessageRepository(AssistantDbContext context) : base(context)
    {
    }
}
