@startuml
title 3.6 Assistant Module Class Diagram (Report 4 Embedded Version)

top to bottom direction
hide circle

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 140
skinparam titleFontSize 18
skinparam packageFontSize 16
skinparam classFontSize 14
skinparam classAttributeFontSize 12
skinparam ArrowFontSize 11
skinparam nodesep 28
skinparam ranksep 36
skinparam packageTitleAlignment left
skinparam packageStyle rectangle
skinparam packageBackgroundColor White
skinparam packageBorderColor Black
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam ArrowColor Black

package "API Layer" as ApiLayer {
  class AssistantConversationsController <<boundary>> {
    - conversationService: IAssistantConversationService
    --
    + GetConversations(workspaceId: Guid): Task<Result>
    + GetMessages(conversationId: Guid): Task<Result>
    + PostMessage(conversationId: Guid, request: PostMessageRequest): Task<Result>
  }

  class AssistantHub <<boundary>> {
    - conversationService: IAssistantConversationService
    --
    + JoinConversationAsync(conversationId: Guid): Task
    + LeaveConversationAsync(conversationId: Guid): Task
  }

  AssistantConversationsController -[hidden]right- AssistantHub
}

package "Application Layer" as ApplicationLayer {
  class AssistantConversationService <<control>> {
    - conversationRepository: IAssistantConversationRepository
    - messageRepository: IAssistantMessageRepository
    - requestPublisher: IRedisAssistantChatRequestPublisher
    - unitOfWork: IUnitOfWork
    --
    + CreateConversationAsync(workspaceId: Guid, userId: Guid, title: String): Task<Result>
    + SendMessageAsync(conversationId: Guid, content: String): Task<Result>
    + ExecuteToolCallsAsync(messageId: Guid, toolCalls: List<ToolCallDto>): Task<Result>
  }

  class AssistantNotifier <<control>> {
    - assistantHub: AssistantHub
    --
    + NotifyMessageChunkAsync(conversationId: Guid, chunk: String): Task
    + NotifyCompletionAsync(conversationId: Guid, messageId: Guid): Task
  }

  AssistantConversationService -[hidden]right- AssistantNotifier
}

package "Infrastructure Layer" as InfrastructureLayer {
  class AssistantDbContext <<control>> {
    + AssistantConversations: DbSet<AssistantConversation>
    + AssistantMessages: DbSet<AssistantMessage>
    + AssistantToolCalls: DbSet<AssistantToolCall>
    --
    + SaveChangesAsync(): Task<Int>
  }

  class UnitOfWork <<control>> {
    - dbContext: AssistantDbContext
    --
    + SaveChangesAsync(): Task<Int>
    + BeginTransactionAsync(): Task
    + CommitTransactionAsync(): Task
  }

  class AssistantConversationRepository <<control>> {
    - dbContext: AssistantDbContext
    --
    + GetByWorkspaceAndUserAsync(workspaceId: Guid, userId: Guid): Task<List<AssistantConversation>>
    + GetByIdAsync(id: Guid): Task<AssistantConversation>
    + AddAsync(conversation: AssistantConversation): Task
  }

  class AssistantMessageRepository <<control>> {
    - dbContext: AssistantDbContext
    --
    + GetByConversationIdAsync(conversationId: Guid): Task<List<AssistantMessage>>
    + AddAsync(message: AssistantMessage): Task
  }

  class RedisAssistantChatRequestPublisher <<control>> {
    - redis: IConnectionMultiplexer
    --
    + PublishChatRequestAsync(requestEvent: String): Task
  }

  AssistantConversationRepository -[hidden]right- AssistantMessageRepository
  AssistantMessageRepository -[hidden]right- RedisAssistantChatRequestPublisher
  AssistantDbContext -[hidden]right- UnitOfWork
  AssistantConversationRepository -[hidden]down- AssistantDbContext
}

package "Domain Layer" as DomainLayer {
  class AssistantConversation <<entity>> {
    - Id: Guid
    - WorkspaceId: Guid
    - UserId: Guid
    - Title: String
    - ContextScope: String
    - CreatedAt: DateTime
    - LastMessageAt: DateTime
    --
  }

  class AssistantMessage <<entity>> {
    - Id: Guid
    - ConversationId: Guid
    - WorkspaceId: Guid
    - Role: String
    - Content: String
    - Status: String
    - CreatedAt: DateTime
    --
  }

  class AssistantToolCall <<entity>> {
    - Id: Guid
    - MessageId: Guid
    - ToolName: String
    - ArgumentsJson: String
    - Status: String
    --
  }

  AssistantConversation -[hidden]right- AssistantMessage
  AssistantMessage -[hidden]right- AssistantToolCall
}

package "External Systems" as ExternalSystems {
  class WarptalkAiWorker <<external system>> {
    - workerEndpoint: String
    --
    + GenerateAssistantResponseAsync(prompt: String): Task
  }
}

AssistantConversationsController --> AssistantConversationService
AssistantHub --> AssistantConversationService

AssistantConversationService ..> AssistantConversationRepository
AssistantConversationService ..> AssistantMessageRepository
AssistantConversationService ..> UnitOfWork
AssistantConversationService --> RedisAssistantChatRequestPublisher

AssistantNotifier --> AssistantHub

AssistantConversationRepository ..> AssistantDbContext
AssistantMessageRepository ..> AssistantDbContext
UnitOfWork ..> AssistantDbContext

AssistantConversationRepository ..> AssistantConversation : persists
AssistantMessageRepository ..> AssistantMessage : persists

RedisAssistantChatRequestPublisher ..> WarptalkAiWorker : publishes requests

AssistantConversation "1" *-- "0..*" AssistantMessage
AssistantMessage "1" *-- "0..*" AssistantToolCall

@enduml
